--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         <p>© 2023</p>
       </div>
       <div class="footer-links">
-        <a href="#"> <img src="img/facebook.svg" /> </a>
-        <a href="#"> <img src="img/instagram.svg" /> </a>
-        <a href="#"> <img src="img/telegram.svg" /> </a>
-        <a href="#"> <img src="img/discord.svg" /> </a>
+        <a href="#"> <img src="./img/Снимок экрана_28-8-2025_203931_www.bing.com.jpeg" /> </a>
+        <a href="#"> <img src="./img/Снимок экрана_28-8-2025_204124_www.bing.com.jpeg" /> </a>
+        <a href="#"> <img src="./img/Снимок экрана_28-8-2025_204233_www.bing.com.jpeg" /> </a>
+        <a href="#"> <img src="./img/Снимок экрана_28-8-2025_204318_www.bing.com.jpeg" /> </a>
       </div>
     </footer>
   </body>
